# libccf

./: CMakeLists.txt  cam3_gt.txt
.svn/: all-wcprops  entries
.svn/text-base/: compareTable.svn-base
FRESH/.svn/: all-wcprops  entries
FRESH/144/: RT_PersonClassifier.yaml
FRESH/144/.svn/: all-wcprops  entries
FRESH/256/.svn/: all-wcprops  entries
FRESH/256/.svn/text-base/: compImg_256.jpg.svn-base  compareTable_256.svn-base
ccf/: CCF_Context.cpp  Colormap.h  FeatureExtraction.cpp  FrangiFilter3D.cpp  FrangiUtils.h  GaussianMixture.cpp  SaliencyDetector.cpp  SceneModel.cpp  SceneModel.h  imgaussian.cpp
ccf/.svn/: all-wcprops  entries
ccf/.svn/text-base/: CCF_Context.h.svn-base  CCF_Context_TBB.cpp.svn-base  CCF_Context_TBB.h.svn-base  CMakeLists.txt.svn-base  FrangiFilter3D.h.svn-base  GaussianMixture.h.svn-base  HOGDetect.cpp.svn-base  HOGDetect.h.svn-base  eig3volume.cpp.svn-base
ccf_rt/: CCF.h.in  CCF_Context.h  CCF_Context_TBB.cpp  FeatureExtraction.cpp  FeatureExtraction.h  FreshDetector.cpp  GaussianMixture.cpp  HOGDetect.h  Trajector.cpp  Trajector.h
ccf_rt/.svn/: all-wcprops  entries
ccf_rt/.svn/text-base/: CCF_Context.cpp.svn-base  CCF_Context_TBB.h.svn-base  CMakeLists.txt.svn-base  Colormap.cpp.svn-base  FreshDetector.h.svn-base  GaussianMixture.h.svn-base  SaliencyDetector.h.svn-base
evaluation/: plotRCP.py
evaluation/.svn/: all-wcprops  entries
evaluation/.svn/text-base/: CMakeLists.txt.svn-base  ccfEvaluation.cpp.svn-base  evaUtils.h.svn-base
sample/: ccfCam.cpp  ccfSequence.cpp  freshTrainer.cpp  sampleUtils.h
sample/.svn/: all-wcprops  entries
sample/.svn/text-base/: CMakeLists.txt.svn-base  ccfCam.cpp.svn-base
